<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ForceLimiterFsmEvent" Id="{647f7759-8191-4966-96a4-39120b20ccf7}">
    <Declaration><![CDATA[TYPE ForceLimiterFsmEvent :
(
	FsmEvent_Manual_Limits_Not_Set := 0,
	FsmEvent_Manual_Limits_Set,
	FsmEvent_Approaching_Limits,
	FsmEvent_Not_Approaching_Limits,
	FsmEvent_Limit_Surpassed,	
	FsmEvent_Limit_Not_Surpassed,	
	NUM_FsmEvents	
) BYTE;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>